관심목록, 판매중인상품

--- a/src/main/resources/templates/member/memberInfo.html
+++ b/src/main/resources/templates/member/memberInfo.html
@@ -101,7 +101,7 @@
     <br/>
     <br/>
     <button class="w-50 btn btn-secondary btn-group-sm"
-            type="button" th:onclick="|location.href='@{/members/{memId}/trade/sellList(memId=${session.loginMember.memId})}'|">관심목록</button>
+            type="button" th:onclick="|location.href='@{/members/{memId}/wishes(memId=${session.loginMember.memId})}'|">관심목록</button>
 
     <button class="w-50 btn btn-secondary btn-group-sm"
             type="button" th:onclick="|location.href='@{/members/{memId}/trade/sellList(memId=${session.loginMember.memId})}'|">판매내역</button>
