--- a/src/main/resources/templates/myPage/sellList.html
+++ b/src/main/resources/templates/myPage/sellList.html
@@ -23,9 +23,9 @@
                         <!-- 제목-->
                         <h5 class="fw-bolder" th:text="${post.title}">제목</h5>
                         <!--지역, 시간-->
-                        <p class="fw">[[${post.loc.locName}]] / 1시간 전</p>
+                        <p class="fw">[[${post.loc.locName}]] / [[${post.createdTime}]]</p>
                         <!-- 가격-->
-                        <h6 class="fw-bolder" th:text="|${post.price}원|">가격</h6>
+                        <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${post.price}원|">가격</h6>
                     </div>
                 </div>
             </div>
@@ -56,9 +56,9 @@
                         <!-- 제목-->
                         <h5 class="fw-bolder" th:text="${soldPost.postDto.title}">제목</h5>
                         <!--지역, 시간-->
-                        <p class="fw">[[${soldPost.postDto.loc.locName}]] / 1시간 전</p>
+                        <p class="fw">[[${soldPost.postDto.loc.locName}]] / [[${post.createdTime}]]</p>
                         <!-- 가격-->
-                        <h6 class="fw-bolder" th:text="|${soldPost.postDto.price}원|">가격</h6>
+                        <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${soldPost.postDto.price}원|">가격</h6>
                     </div>
                 </div>
                 </div>
@@ -90,9 +90,9 @@
                         <!-- 제목-->
                         <h5 class="fw-bolder" th:text="${hidePost.title}">제목</h5>
                         <!--지역, 시간-->
-                        <p class="fw">[[${hidePost.loc.locName}]] / 1시간 전</p>
+                        <p class="fw">[[${hidePost.loc.locName}]] / [[${post.createdTime}]]</p>
                         <!-- 가격-->
-                        <h6 class="fw-bolder" th:text="|${hidePost.price}원|">가격</h6>
+                        <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${hidePost.price}원|">가격</h6>
                     </div>
                 </div>
                 </div>
