--- a/src/main/resources/templates/myPage/wishList.html
+++ b/src/main/resources/templates/myPage/wishList.html
@@ -12,8 +12,10 @@
 <section class="py-5" >
     <h1>관심목록</h1>
     <div class="container px-4 px-lg-5 mt-5">
-    <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-        <div class="col mb-5" th:each = "post:${onSaleAndRsv}">
+        <div th:if="${postList.isEmpty()}"><p>찜한 게시글이 없습니다.</p></div>
+
+        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+        <div class="col mb-5" th:each = "post:${postList}">
             <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${post.postId}|}'|" style="cursor: pointer;">
                 <!-- 제품사진-->
                 <img class="card-img-top" th:src="|/post/firstImg/${post.postId}|" alt="제품사진" />
@@ -23,18 +25,12 @@
                         <!-- 제목-->
                         <h5 class="fw-bolder" th:text="${post.title}">제목</h5>
                         <!--지역, 시간-->
-                        <p class="fw">[[${post.loc.locName}]] / 1시간 전</p>
+                        <p class="fw">[[${post.loc.locName}]] / [[${post.createdTime}]]</p>
                         <!-- 가격-->
-                        <h6 class="fw-bolder" th:text="|${post.price}원|">가격</h6>
+                        <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${post.price}원|">가격</h6>
                     </div>
                 </div>
             </div>
-<!--            <button th:if="${post.sellState.getSellStateName().equals('판매중')}">끌어올리기</button>-->
-            <button th:if="${post.sellState.getSellStateName().equals('판매중')}" th:onclick="sellState([[${post.postId}]],'예약중')">예약중으로 변경</button>
-            <button th:if="${post.sellState.getSellStateName().equals('판매중')}" th:onclick="sellState([[${post.postId}]],'판매완료')">판매완료</button>
-
-            <button th:if="${post.sellState.getSellStateName().equals('예약중')}" th:onclick="sellState([[${post.postId}]],'판매중')">판매중으로 변경</button>
-            <button th:if="${post.sellState.getSellStateName().equals('예약중')}" th:onclick="sellState([[${post.postId}]],'판매완료')">판매완료</button>
         </div>
     </div>
 </div>
