--- a/src/main/resources/templates/myPage/wishList.html
+++ b/src/main/resources/templates/myPage/wishList.html
@@ -4,7 +4,7 @@
       layout:decorate="~{layout/basic.html}">
 
 <head layout:fragment="head">
-    <title>판매목록</title>
+    <title>관심목록</title>
 
 </head>
 
@@ -44,10 +44,6 @@
 
 <div layout:fragment="script" th:inline="javascript">
     <script th:inline="javascript">
-
-
-
-
 
     </script>
 </div>
