--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -2554,7 +2554,7 @@ textarea.form-control-lg {
 
 .form-check-inline {
   display: inline-block;
-  margin-right: 1rem;
+  margin-left: 1rem;
 }
 
 .btn-check {
@@ -2995,7 +2995,7 @@ textarea.form-control-lg {
   display: inline-block;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: white;
   text-align: center;
   text-decoration: none;
   vertical-align: middle;
@@ -3004,7 +3004,7 @@ textarea.form-control-lg {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  background-color: transparent;
+  background-color: #ff6a00;
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
@@ -3018,6 +3018,9 @@ textarea.form-control-lg {
 }
 .btn:hover {
   color: #212529;
+  background-color: transparent;
+  border-color: #212529;
+
 }
 .btn-check:focus + .btn, .btn:focus {
   outline: 0;
@@ -4055,6 +4058,8 @@ textarea.form-control-lg {
   font-size: 1.25rem;
   text-decoration: none;
   white-space: nowrap;
+  display: flex;
+  line-height: 1.5;
 }
 .navbar-nav {
   display: flex;
@@ -11286,4 +11291,13 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
+}
+
+/*  custom*/
+
+.img-icon{
+  height: 40px;
+}
+.img-logo{
+  height: 46px;
 }
