--- a/src/main/resources/templates/post/board.html
+++ b/src/main/resources/templates/post/board.html
@@ -4,14 +4,14 @@
       layout:decorate="~{layout/basic.html}">
 
 <head layout:fragment="head">
-    <title>상품</title>
+    <title>중고거래 상품</title>
 
 </head>
-
 <div layout:fragment="content">
-        <!-- Section-->
+    <h1 class="text-center">[[${session.loginMember.loc.locName}]] 중고거래 상품</h1>
         <a th:href="@{/post/uploadPage}">글쓰기</a>
         <section class="py-5">
+            <p class="text-center" th:if="${list.isEmpty()}">게시된 상품이 없습니다.</p>
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     <div class="col mb-5" th:each = "post:${list}">
@@ -35,36 +35,7 @@
 <!--                            </div>-->
                         </div>
                     </div>
-<!--                    <div class="col mb-5">-->
-<!--                        <div class="card h-100">-->
-<!--                            &lt;!&ndash; Sale badge&ndash;&gt;-->
-<!--                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>-->
-<!--                            &lt;!&ndash; Product image&ndash;&gt;-->
-<!--                            <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />-->
-<!--                            &lt;!&ndash; Product details&ndash;&gt;-->
-<!--                            <div class="card-body p-4">-->
-<!--                                <div class="text-center">-->
-<!--                                    &lt;!&ndash; Product name&ndash;&gt;-->
-<!--                                    <h5 class="fw-bolder">Special Item</h5>-->
-<!--                                    &lt;!&ndash; Product reviews&ndash;&gt;-->
-<!--                                    <div class="d-flex justify-content-center small text-warning mb-2">-->
-<!--                                        <div class="bi-star-fill"></div>-->
-<!--                                        <div class="bi-star-fill"></div>-->
-<!--                                        <div class="bi-star-fill"></div>-->
-<!--                                        <div class="bi-star-fill"></div>-->
-<!--                                        <div class="bi-star-fill"></div>-->
-<!--                                    </div>-->
-<!--                                    &lt;!&ndash; Product price&ndash;&gt;-->
-<!--                                    <span class="text-muted text-decoration-line-through">$20.00</span>-->
-<!--                                    $18.00-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                            &lt;!&ndash; Product actions&ndash;&gt;-->
-<!--                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">-->
-<!--                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
+
                 </div>
             </div>
 
