--- a/src/main/resources/templates/post/buyerListByPost.html
+++ b/src/main/resources/templates/post/buyerListByPost.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/basic.html}">
 <head layout:fragment="head">
-    <title>채팅 테스트</title>
+    <title>구매자 선택</title>
 </head>
 
 <div class="container bootstrap snippets bootdey" layout:fragment="content">
@@ -30,7 +30,7 @@
                         </div>
                         <div>
                             <small class="time text-muted">[[${chatRoom.createdTime}]]</small>
-                            <small class="chat-alert label label-danger">[[${chatRoom.unacknowledgedMessageCount}]]</small>
+<!--                            <small class="chat-alert label label-danger">[[${chatRoom.unacknowledgedMessageCount}]]</small>-->
                         </div>
 
                     </a>
@@ -42,79 +42,5 @@
 </div>
 
 <script layout:fragment="script" th:inline="javascript">
-    console.log("script.....................");
-    function chooseBuyer(){
 
-
-    }
-    // function connect4() {
-    //     //StompConfig.java에 설정된 endpoint로 SockJS 객체, StompClient 객체 생성
-    //     var socket = new SockJS("http://localhost:8888/gs-guide-websocket");
-    //     //do Handshake
-    //     stompClient3 = Stomp.over(socket);
-    //
-    //     // connect(header,연결 성공시 콜백,에러발생시 콜백)
-    //     stompClient3.connect({}, function () {
-    //             //subscribe(subscribe url,해당 url로 메시지를 받을때마다 실행할 함수)
-    //             //게시글번호/판매자/구매자
-    //             sub = stompClient3.subscribe('/topic/chatRoomList/' + [[${session.loginMember}]]["memId"], function (e) {
-    //                 //e.body에 전송된 data가 들어있다
-    //                 showMessage4(e.body);
-    //                 console.log('------------------------')
-    //                 console.log(e)
-    //                 console.log(e.body)
-    //                 console.log('------------------------')
-    //             });
-    //         },
-    //         function (e) {
-    //             //에러 콜백
-    //             alert('에러발생!!!!!!');
-    //         }
-    //     );
-    // }
-    //
-    // connect4();
-
-    // function showMessage4(roomId) {
-    //     $.ajax({
-    //         url:"/chat/getChatRoom/"+roomId,
-    //         type:"post",
-    //         success: function (result) {
-    //             let loginId = [[${session.loginMember.memId}]];
-    //             let fromId = "";
-    //             if (result.buyerId == loginId) {
-    //                 fromId = result.sellerId;
-    //             } else {
-    //                 fromId = result.buyerId
-    //             }
-    //             let newChatRoomHtml = `<li id="roomId${result.roomId}">
-    //                 <a href="/chat/chatRoom/${result.roomId}" class="clearfix">
-    //                     <div class="profile_img">
-    //                         <img src="/members/${fromId}/profileImg" alt="프로필이미지">
-    //                     </div>
-    //                     <div class="name_message">
-    //                         <div class="friend-name">
-    //                             <strong>${fromId}</strong>
-    //                         </div>
-    //                         <div class="last-message text-muted">${result.message}</div>
-    //                     </div>
-    //                     <div>
-    //                         <small class="time text-muted">${result.createdTime}</small>
-    //                         <small class="chat-alert label label-danger">${result.unacknowledgedMessageCount}</small>
-    //                     </div>
-    //                     <div class="product_thumbnail">
-    //                         <img class="card-img-top" src="/post/firstImg/${result.postId}" alt="제품사진" />
-    //                     </div>
-    //                 </a>
-    //             </li>`;
-    //             let find = $("#roomId"+roomId).html();
-    //             if (find != undefined) {
-    //                 let newChatRoom = $("#roomId" + roomId).html(newChatRoomHtml);
-    //                 $(newChatRoom).prependTo(".friend-list");
-    //             } else {
-    //                 $(newChatRoomHtml).prependTo(".friend-list");
-    //             }
-    //         },
-    //     });
-    // }
 </script>
