--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -2551,10 +2551,10 @@ textarea.form-control-lg {
   background-position: right center;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
 }
-
+/*custom*/
 .form-check-inline {
   display: inline-block;
-  margin-left: 1rem;
+  /*margin-left: 1rem;*/
 }
 
 .btn-check {
@@ -2995,7 +2995,7 @@ textarea.form-control-lg {
   display: inline-block;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: white;
   text-align: center;
   text-decoration: none;
   vertical-align: middle;
@@ -4087,6 +4087,7 @@ textarea.form-control-lg {
   align-items: center;
 }
 
+/*custom*/
 .navbar-toggler {
   padding: 0.25rem 0.75rem;
   font-size: 1.25rem;
@@ -4112,13 +4113,14 @@ textarea.form-control-lg {
 
 .navbar-toggler-icon {
   display: inline-block;
-  width: 1.5em;
-  height: 1.5em;
+  width: 1.0em;
+  height: 1.0em;
   vertical-align: middle;
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100%;
 }
+/*custom*/
 
 .navbar-nav-scroll {
   max-height: var(--bs-scroll-height, 75vh);
@@ -11293,43 +11295,3 @@ textarea.form-control-lg {
   }
 }
 
-/*  custom*/
-
-.img-icon{
-  height: 40px;
-}
-.img-logo{
-  height: 46px;
-}
-
-.btn-orange {
-  display: inline-block;
-  font-weight: 400;
-  line-height: 1.5;
-  color: white;
-  text-align: center;
-  text-decoration: none;
-  vertical-align: middle;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  background-color: #ff6a00;
-  border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-@media (prefers-reduced-motion: reduce) {
-  .btn-orange {
-    transition: none;
-  }
-}
-.btn-orange:hover {
-  color: #212529;
-  background-color: transparent;
-  border-color: #212529;
-
-}
