--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -9,34 +9,41 @@
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-        <!--채팅방 관련 css 2023.03.28 남호용-->
-        <link href="/css/chat.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="/css/styles.css" rel="stylesheet" />
+        <!--채팅방 관련 css 2023.03.28 남호용-->
+        <link href="/css/chat.css" rel="stylesheet" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <!--nav-->
+        <link href="/css/nav.css" rel="stylesheet" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Gugi&family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,100,0,0" />
     </head>
     <th:block layout:fragment="head" />
 
     <body>
-        <!-- Navigation-->
-        <div th:replace="~{/fragments/nav.html :: fragment-nav}"></div>
-        <!-- Section-->
-        <section class="py-5">
-            <div class="container px-4 px-lg-5 mt-5">
-                <div layout:fragment="content"></div>
-            </div>
-        </section>
-        <!-- Footer-->
-<!--        <footer class="py-5 bg-dark">
-        <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
-        </footer>-->
-
+    <div>
+            <!-- Navigation-->
+            <div th:replace="~{/fragments/nav.html :: fragment-nav}"></div>
+            <!-- Section-->
+            <section class="py-5">
+                <div class="container px-4 px-lg-5 mt-5">
+                    <div layout:fragment="content"></div>
+                </div>
+            </section>
+            <!-- Footer-->
+            <!--        <footer class="py-5 bg-dark">
+                    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
+                    </footer>-->
+        </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="/js/scripts.js"></script>
         <!--ajax-->
-<!--        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
+        <!--        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>-->
         <!--sockJS-->
         <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
         <!--STOMP-->
@@ -90,6 +97,14 @@
                 }).done(function (res) {
                     location.href = res;
                 });
+            }
+            function search() {
+                let input_word = $('.search-input').val();
+                if(!input_word) {
+                    alert("검색어를 입력해주세요.");
+                } else {
+                    $('#search-form').submit();
+                }
             }
         </script>
     </body>
