--- a/src/main/resources/templates/post/searchList.html
+++ b/src/main/resources/templates/post/searchList.html
@@ -5,173 +5,85 @@
 
 <head layout:fragment="head">
     <title>검색목록</title>
-
 </head>
 
 <div layout:fragment="content">
-<section class="py-5" >
-    <h1>판매중</h1>
-    <div class="container px-4 px-lg-5 mt-5">
-        <div th:if="${onSaleAndRsv.isEmpty()}"><p>판매중인 상품이 없습니다.</p></div>
-    <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-        <div class="col mb-5" th:unless="${onSaleAndRsv.isEmpty()}" th:each = "post:${onSaleAndRsv}">
-            <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${post.postId}|}'|" style="cursor: pointer;">
-                <!-- 제품사진-->
-                <img class="card-img-top" th:src="|/post/firstImg/${post.postId}|" alt="제품사진" />
-                <!-- Product details-->
-                <div class="card-body p-4">
-                    <div class="text-center">
-                        <!-- 제목-->
-                        <h5 class="fw-bolder" th:text="${post.title}">제목</h5>
-                        <!--지역, 시간-->
-                        <p class="fw">[[${post.loc.locName}]] / [[${post.createdTime}]]</p>
-                        <!-- 가격-->
-                        <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${post.price}원|">가격</h6>
+    <section class="py-5">
+        <h1>검색 결과</h1>
+        <div class="container px-4 px-lg-5 mt-5">
+            <div th:if="${postList.isEmpty()}"><p>검색 결과가 없습니다.</p></div>
+            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                <div class="col mb-5" th:unless="${postList.isEmpty()}"  th:each = "post:${postList}">
+                    <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${post.postId}|}'|" style="cursor: pointer;">
+                    <!-- 제품사진-->
+                        <img class="card-img-top" th:src="|/post/firstImg/${post.postId}|" alt="제품사진" />
+                        <!-- Product details-->
+                        <div class="card-body p-4">
+                            <div class="text-center">
+                                <!-- 제목-->
+                                <h5 class="fw-bolder" th:text="${post.title}">제목</h5>
+                                <!--지역, 시간-->
+                                <p class="fw">[[${post.loc.locName}]] / [[${post.createdTime}]]</p>
+                                <!-- 가격-->
+                                <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${post.price}원|">가격</h6>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-<!--            <button th:if="${post.sellState.getSellStateName().equals('판매중')}">끌어올리기</button>-->
-            <button th:if="${post.sellState.getSellStateName().equals('판매중')}" th:onclick="sellState([[${post.postId}]],'예약중')">예약중으로 변경</button>
-            <button th:if="${post.sellState.getSellStateName().equals('판매중')}" th:onclick="sellState([[${post.postId}]],'판매완료')">판매완료</button>
-
-            <button th:if="${post.sellState.getSellStateName().equals('예약중')}" th:onclick="sellState([[${post.postId}]],'판매중')">판매중으로 변경</button>
-            <button th:if="${post.sellState.getSellStateName().equals('예약중')}" th:onclick="sellState([[${post.postId}]],'판매완료')">판매완료</button>
         </div>
-    </div>
-</div>
-</section>
+        <!-- 페이징 -->
+        <div th:if="${!postList.isEmpty()}">
+            <!-- 전역 변수 선언 -->
+            <nav th:with="pageNumber = ${postList.pageable.pageNumber}, pageSize = ${postList.pageable.pageSize},totalPages = ${postList.totalPages},startPage = ${T(java.lang.Math).floor(pageNumber / pageSize) * pageSize + 1},tempEndPage = ${startPage + pageSize - 1},endPage = (${tempEndPage < totalPages ? tempEndPage : totalPages})"
+                 aria-label="Page navigation"
+            >
+                <ul class="pagination">
+                    <!-- 처음으로 이동 -->
+                    <li th:classappend="${pageNumber < pageSize} ? 'disabled'" class="page-item">
+                        <a class="page-link" th:href="@{/post/search(word=${searchedWord}, page=0)}">
+                            <span>&laquo;</span>
+                            <span class="sr-only">First</span>
+                        </a>
+                    </li>
 
+                    <!-- 이전으로 이동 -->
+                    <li th:classappend="${postList.first} ? 'disabled'" class="page-item">
+                        <a class="page-link" th:href="${postList.first} ? '#' : @{/post/search(word=${searchedWord}, page=${pageNumber - 1})}" aria-label="Previous">
+                            <span aria-hidden="true">&lt;</span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                    </li>
 
+                    <!-- 특정 페이지로 이동 -->
+                    <li th:each="page: ${#numbers.sequence(startPage, endPage)}" th:classappend="${page == pageNumber + 1} ? 'active'" class="page-item">
+                        <a th:text="${page}" class="page-link" th:href="@{/post/search(word=${searchedWord}, page=${page - 1})}"></a>
+                    </li>
 
-<section class="py-5">
-    <h1>판매완료</h1>
-    <div class="container px-4 px-lg-5 mt-5">
-        <div th:if="${soldList.isEmpty()}"><p>판매완료한 상품이 없습니다.</p></div>
-        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-            <div class="col mb-5" th:unless="${soldList.isEmpty()}"  th:each = "soldPost:${soldList}">
-                <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${soldPost.postDto.postId}|}'|" style="cursor: pointer;">
-                <!-- 제품사진-->
-                <img class="card-img-top" th:src="|/post/firstImg/${soldPost.postDto.postId}|" alt="제품사진" />
-                <!-- Product details-->
-                <div class="card-body p-4">
-                    <div class="text-center">
-                        <!-- 제목-->
-                        <h5 class="fw-bolder" th:text="${soldPost.postDto.title}">제목</h5>
-                        <!--지역, 시간-->
-                        <p class="fw">[[${soldPost.postDto.loc.locName}]] / [[${soldPost.postDto.createdTime}]]</p>
-                        <!-- 가격-->
-                        <h6 class="fw-bolder" th:if="${soldPost.postDto.price}!=0" th:text="|${soldPost.postDto.price}원|">가격</h6>
-                    </div>
-                </div>
-                </div>
-                <div>
-                    <a  th:if="${soldPost.reviewBuyerId == null}"
-                        th:href="@{/post/buyers/{postId}(postId=${soldPost.postDto.postId})}">
-                        거래후기 보내기</a>
-                    <a  th:if="${soldPost.reviewBuyerId != null}"
-                        th:href="@{/reviews/buyer/{reviewBuyerId}(reviewBuyerId=${soldPost.reviewBuyerId})}">
-                        거래후기 보기</a>
-                </div>
+                    <!-- 다음으로 이동 -->
+                    <li th:classappend="${postList.last} ? 'disabled'" class="page-item">
+                        <a class="page-link" th:href="${postList.last} ? '#' : @{/post/search(word=${searchedWord}, page=${pageNumber + 1})}" aria-label="Next">
+                            <span aria-hidden="true">&gt;</span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </li>
 
-            </div>
-        </div>
-    </div>
-</section>
-
-<section class="py-5">
-    <h1>숨김</h1>
-    <div class="container px-4 px-lg-5 mt-5">
-        <div th:if="${hidePostList.isEmpty()}"><p>숨긴 게시글이 없습니다.</p></div>
-        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-            <div class="col mb-5" th:unless="${hidePostList.isEmpty()}" th:each = "hidePost:${hidePostList}">
-            <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${hidePost.postId}|}'|" style="cursor: pointer;">
-                <!-- 제품사진-->
-                <img class="card-img-top" th:src="|/post/firstImg/${hidePost.postId}|" alt="제품사진" />
-                <!-- Product details-->
-                <div class="card-body p-4">
-                    <div class="text-center">
-                        <!-- 제목-->
-                        <h5 class="fw-bolder" th:text="${hidePost.title}">제목</h5>
-                        <!--지역, 시간-->
-                        <p class="fw">[[${hidePost.loc.locName}]] / [[${hidePost.createdTime}]]</p>
-                        <!-- 가격-->
-                        <h6 class="fw-bolder" th:if="${hidePost.price}!=0" th:text="|${hidePost.price}원|">가격</h6>
-                    </div>
-                </div>
-                </div>
-                <button type="button" th:onclick="hideState([[${hidePost.postId}]], [[${hidePost.hideState.getHideStateName()}]])">숨기기 해제</button>
-                <!--Product actions-->
-<!--                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">-->
-<!--                    <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>-->
-<!--                </div>-->
-            </div>
-        </div>
-    </div>
-</section>
-
+                    <!-- 마지막으로 이동 -->
+                    <li th:classappend=" ${T(java.lang.Math).floor(totalPages / pageSize) * pageSize - 1 <= startPage} ? 'disabled'" class="page-item">
+                        <a class="page-link" th:href="@{/post/search(word=${searchedWord}, page=${totalPages - 1})}">
+                            <span>&raquo;</span>
+                            <span class="sr-only">Last</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div> <!-- /페이징 -->
+    </section>
 </div>
 
 
 
 <div layout:fragment="script" th:inline="javascript">
     <script th:inline="javascript">
-
-        //게시물 숨기기
-        function hideState(postId, hideStateName){
-            console.log("postId:",postId,"hideState:",hideStateName);
-
-            let data = {"postId" : postId, "hideStateName": hideStateName};
-
-            $.ajax({
-                url: '/post/hideState',
-                type: 'POST',
-                data: data,
-                success: function(result){
-                    console.log(result);
-                    //화면 처리
-                    alert(result);
-                    location.reload();
-                },
-                error: function(jqXHR, textStatus, errorThrown){
-                    console.log(jqXHR.responseText);
-                    alert("변경에 실패했습니다.");
-                }
-            }); //$.ajax
-        }
-
-        //판매여부 변경
-        function sellState(postId, sellStateName){
-            console.log("postId:",postId,"sellStateName:",sellStateName);
-
-            let data = {"postId" : postId, "sellStateName": sellStateName};
-
-            $.ajax({
-                url: '/post/sellState',
-                type: 'POST',
-                data: data,
-                success: function(result){
-                    // console.log(result);
-                    //화면 처리
-                    alert(result+"(으)로 변경되었습니다.");
-                    if(result == "판매완료"){
-                        let trueFalse = confirm("거래후기를 작성하시겠습니까?")
-                        if(trueFalse==true){
-                            location.href=`/post/buyers/${postId}`;
-                        } else{
-                            location.reload();
-                        }
-                    } else{
-                        location.reload();
-                    }
-
-                },
-                error: function(jqXHR, textStatus, errorThrown){
-                    console.log(jqXHR.statusText);
-                    alert("변경에 실패했습니다.");
-                }
-            }); //$.ajax
-        }
-
-
     </script>
 </div>
