--- a/src/main/resources/templates/post/detail.html
+++ b/src/main/resources/templates/post/detail.html
@@ -23,7 +23,7 @@
                     <div class="col-md-6">
                         <div class="slider">
 <!--                        <li th:each="imgId:${imgIds}">-->
-                            <img class="card-img-top mb-5 mb-md-0" th:each="imgId:${imgIds}" th:src="|/post/img/${imgId}|" alt="..." style="object-fit: cover;"/>
+                            <img class="card-img-detail mb-5 mb-md-0" th:each="imgId:${imgIds}" th:src="|/post/img/${imgId}|" alt="..." style="object-fit: cover;"/>
                         </div>
                     </div>
 <!--                        </li>-->
