--- a/src/main/resources/templates/post/board.html
+++ b/src/main/resources/templates/post/board.html
@@ -9,8 +9,9 @@
 </head>
 <div layout:fragment="content">
     <h1 class="text-center">[[${session.loginMember.loc.locName}]] 중고거래 상품</h1>
-        <a th:href="@{/post/uploadPage}">글쓰기</a>
-        <section class="py-5">
+    <button class="btn-orange float-md-start" th:onclick="|location.href='@{/post/uploadPage}'|">상품 올리기</button>
+
+    <section class="py-5">
             <p class="text-center" th:if="${list.isEmpty()}">게시된 상품이 없습니다.</p>
             <div class="container px-4 px-lg-5 mt-5">
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
@@ -22,36 +23,39 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- 제목-->
-                                    <h5 class="fw-bolder" th:text="${post.title}">제목</h5>
+                                    <h5 class="fw-bolder text-truncate" th:text="${post.title}">제목</h5>
                                     <!--지역, 시간-->
-                                    <p class="fw">[[${post.loc.locName}]] / [[${post.createdTime}]]</p>
+                                    <p class="fw-normal text-secondary">[[${post.loc.locName}]] ∙ [[${post.createdTime}]]</p>
                                     <!-- 가격-->
                                     <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${post.price}원|">가격</h6>
+                                    <!--예약중 배지-->
+                                    <span class="badge bg-secondary" th:if="${post.sellState.getSellStateName().equals('예약중')}">예약중</span>
+
                                 </div>
                             </div>
-                            <!-- Product actions-->
-<!--                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">-->
-<!--                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>-->
-<!--                            </div>-->
+
                         </div>
                     </div>
 
                 </div>
             </div>
 
-            <!-- 페이징 -->
+
+        <!-- 페이징 -->
             <div th:if="${!list.isEmpty()}">
+
                 <!-- 전역 변수 선언 -->
                 <nav
-                        th:with="pageNumber = ${list.pageable.pageNumber}, pageSize = ${list.pageable.pageSize},totalPages = ${list.totalPages},startPage = ${T(java.lang.Math).floor(pageNumber / pageSize) * pageSize + 1},tempEndPage = ${startPage + pageSize - 1},endPage = (${tempEndPage < totalPages ? tempEndPage : totalPages})"
-                        aria-label="Page navigation"
-                >
+                        th:with="pageNumber = ${list.pageable.pageNumber}, pageSize = ${list.pageable.pageSize},
+                        totalPages = ${list.totalPages}, startPage = ${T(java.lang.Math).floor(pageNumber / pageSize) * pageSize + 1},
+                        tempEndPage = ${startPage + pageSize - 1}, endPage = (${tempEndPage < totalPages ? tempEndPage : totalPages})"
+                        aria-label="Page navigation">
                     <ul class="pagination">
                         <!-- 처음으로 이동 -->
                         <li th:classappend="${pageNumber < pageSize} ? 'disabled'" class="page-item">
                             <a class="page-link" th:href="@{/post/board(page=0)}">
-                                <span>&laquo;</span>
-                                <span class="sr-only">First</span>
+                                <span>&laquo; </span>
+<!--                                <span class="sr-only">First</span>-->
                             </a>
                         </li>
 
@@ -59,7 +63,7 @@
                         <li th:classappend="${list.first} ? 'disabled'" class="page-item">
                             <a class="page-link" th:href="${list.first} ? '#' : @{/post/board(page=${pageNumber - 1})}" aria-label="Previous">
                                 <span aria-hidden="true">&lt;</span>
-                                <span class="sr-only">Previous</span>
+<!--                                <span class="sr-only">Previous</span>-->
                             </a>
                         </li>
 
@@ -72,15 +76,15 @@
                         <li th:classappend="${list.last} ? 'disabled'" class="page-item">
                             <a class="page-link" th:href="${list.last} ? '#' : @{/post/board(page=${pageNumber + 1})}" aria-label="Next">
                                 <span aria-hidden="true">&gt;</span>
-                                <span class="sr-only">Next</span>
+<!--                                <span class="sr-only">Next</span>-->
                             </a>
                         </li>
 
                         <!-- 마지막으로 이동 -->
                         <li th:classappend=" ${T(java.lang.Math).floor(totalPages / pageSize) * pageSize - 1 <= startPage} ? 'disabled'" class="page-item">
                             <a class="page-link" th:href="@{/post/board(page=${totalPages - 1})}">
-                                <span>&raquo;</span>
-                                <span class="sr-only">Last</span>
+                                <span>&raquo; </span>
+<!--                                <span class="sr-only">Last</span>-->
                             </a>
                         </li>
                     </ul>
@@ -93,5 +97,9 @@
 
 <div layout:fragment="script" th:inline="javascript">
     <script th:inline="javascript">
+        console.log("pageNumber:",[[${list.pageable.pageNumber}]]);
+        console.log("pageSize:",[[${list.pageable.pageSize}]]);
+        console.log("totalPage:", [[${list.totalPages}]]);
+
     </script>
 </div>
