--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,9 @@
 </head>
 
 <div layout:fragment="content">
-    처음 홈
+    <div class="bg-light-orange">
+        <img src="/css/images/main_home.png">
+    </div>
 </div>
 
 <script layout:fragment="script" th:inline="javascript">
