--- a/src/main/resources/templates/layout/basic.html
+++ b/src/main/resources/templates/layout/basic.html
@@ -24,7 +24,7 @@
     <th:block layout:fragment="head" />
 
     <body>
-    <div>
+<!--    <div>-->
             <!-- Navigation-->
             <div th:replace="~{/fragments/nav.html :: fragment-nav}"></div>
             <!-- Section-->
@@ -37,7 +37,7 @@
             <!--        <footer class="py-5 bg-dark">
                     <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2022</p></div>
                     </footer>-->
-        </div>
+<!--        </div>-->
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
